# dacsim

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCython.cmake  FindPython.cmake  UseCython.cmake
dat/: CMakeLists.txt
doc/: Makefile  conf.py  index.rst
docs/: cable.rst  conf.py  dacsim.rst  digitize.rst  edist.rst  index.rst  modules.rst  pileup.rst  pmt.rst  scintillator.rst
src/: CMakeLists.txt  cable.py  dacsim.py  digitize.py  edist.py  pileup.py  pmt.py  scintillator.py
